long message overflowing fix

--- a/src/page/components/sms/sms.scss
+++ b/src/page/components/sms/sms.scss
@@ -105,6 +105,7 @@ $color-gray: lightgray;
 
   .message {
     display: flex;
+    word-break: break-all;
     flex-shrink: 0;
     border-radius: 12px;
     width: max-content;
